# kosatka

./: Cargo.toml  style.toml
src/: app.rs  main.rs  utils.rs
src/func/: images.rs
src/ui/: images.rs
