[package]
name = "kosatka"
version = "0.1.0"
authors = ["n1 <hrdina.pavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "*"
futures-util = "*"
tokio = "*"
cursive = { "version" = "*", "features" = ["toml"] }
cursive_table_view = "*"
log = "*"
dirs = "2"
